<resources>
    <string name="app_name">PLPLA</string>
    <string name="welcome">Licence Sciences et technologies</string>
    <string name="semestre">Semestre 1</string>
    <string name="Suivant">Suivant</string>
    <string name="emplacement1S1">Maths Fondement : Semestre 1</string>
    <string name="emplacement2S1">Maths méthode : approche continue</string>
    <string name="ip_address">ip du serveur (10.0.2.2 si vous utilisez l\'émulateur)</string>
    <string name="deroulementPlus">+</string>
    <string name="deroulementMoins">-</string>
    <string name="parcours">Mon parcours</string>
    <string name="Enregistrer">Enregistrer</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="reinitialiser">Réinitialiser</string>
    <string name="parcoursvide">Aucun parcours enregistré</string>
    <string name="title_activity_main_navigation">mainNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">MohamedBenabdelkrim@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="recherche">Recherche</string>

    <!-- S1 -->
    <string name="enjeux">UE amenagements : Math enjeux 1</string>
    <string name="competences">UE Competences transversales</string>



    <!-- CHOIX FONDEMENT 1 -->
    <string name="ue_fondement">UE MATHS S1 : Fondements 1</string>
    <string name="ue_geo">Geographie S1</string>
    <string name="ue_geo1">UE GEOGRAPHIE : Decouverte 1</string>
    <string name="ue_geo2">UE GEOGRAPHIE : Decouverte 2</string>
    <string name="ue_discipline1">UE GEOGRAPHIE : Disciplinaire 1</string>

    <string name="ue_info_s1">Informatique S1</string>
    <string name="ue_base_info">UE INFO S1 : Bases de l\'informatique</string>
    <string name="ue_web">UE INFO S1 : Introduction a l\'informatique par le web</string>

    <string name="ue_complement">UE MATHS S1 : Complements 1</string>

    <string name="choix_SV">SV - PO1 SITE</string>
    <string name="ue_organique">UE SV-S1 : Org et mecan.</string>
    <string name="ue_genetique">UE SV-S1 : Genetique.</string>

    <string name="ue_chimie">UE CHIMIE S1 : Structure microscopique de la matiere</string>

    <string name="ue_electronique">UE ELECTRONIQUE S1 : Electronique numerique - Bases</string>

    <string name="choix_miash">UE MIASHS S1 : Economie-gestion S1</string>
    <string name="ecue_culture">ECUE MIASHS S1 : Culture economie 1</string>
    <string name="ecue_analyse">ECUE MIASHS S1 : Introduction a l\'analyse economique</string>
    <string name="ecue_macro">ECUE MIASHS S1 : Macroeconomie 1</string>

    <string name="ue_physique">UE PHYSIQUE S1 : Mecanique 1</string>

    <string name="ue_terre">UE TERRE S1 : Decouverte des sciences de la terre</string>









    <!-- CHOIX METHODE -->
    <string name="ue_methode">UE MATHS S1 : Methodes - approche continue</string>



    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Mon Profil</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Portail">Portail</string>
    <string name="connect">Vous êtes connecté au serveur.</string>
    <string name="connect_erreur">Erreur lors de la connexion, Vous n\'êtes pas connecté</string>
    <string name="Profil">Mon Profil</string>
    <string name="Nom">Ben Abdelkrim</string>
    <string name="Prenom">Mohamed</string>
    <string name="Mail">Mail</string>
    <string name="Modifier">Modifier</string>
    <string name="saved_on_server">Le serveur a bien enregistré vos choix</string>


</resources>
