<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/emplacement2S1"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="428dp"
        android:background="#D6D7D7"
        android:text="@string/emplacement2S1"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emplacement1S1"
        app:layout_constraintVertical_bias="0.565"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/BoutonSemestre"
        style="@android:style/Widget.Material.Button"
        android:layout_width="412dp"
        android:layout_height="100dp"
        android:fontFamily="serif"
        android:text="@string/semestre"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/emplacement1S1"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginBottom="428dp"
        android:background="#D6D7D7"
        android:text="@string/emplacement1S1"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoutonSemestre"
        app:layout_constraintVertical_bias="0.377"
        android:visibility="gone"
        />

    <CheckBox
        android:id="@+id/checkBoxEmplacement1"
        android:layout_width="34dp"
        android:layout_height="46dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:buttonTint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/emplacement1S"
        app:layout_constraintEnd_toEndOf="@+id/emplacement1S1"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkBoxEmplacement2"
        android:layout_width="34dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:buttonTint="#03A9F4"
        app:layout_constraintEnd_toEndOf="@+id/emplacement1S"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEmplacement1"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>